--- a/CadSimulation/CadSimulation.ConsoleAdapter/CadSimulation.ConsoleAdapter.csproj
+++ b/CadSimulation/CadSimulation.ConsoleAdapter/CadSimulation.ConsoleAdapter.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CadSimulation.Application\CadSimulation.Application.csproj" />
     <ProjectReference Include="..\CadSimulation.Core\CadSimulation.Core.csproj" />
   </ItemGroup>
